# smart-moderation-ai

./: .gitignore  README.md  docker-compose.yml  package.json
.zed/: settings.json
apps/analyzer/: Makefile  pyproject.toml
apps/analyzer/src/: main.py
apps/analyzer/src/core/app/: main.py
apps/analyzer/src/core/utils/: language.py
apps/analyzer/src/services/config/: config.py
apps/api/: .env.example  docker-compose.yml  global.d.ts  package.json  tsconfig.json
apps/api/scripts/: extract-youtube-comments.ts  langchain-playground.ts  youtube-comments.json
apps/api/src/: export.d.ts  index.ts
apps/api/src/core/enums/: event.enum.ts
apps/api/src/core/services/: emitter.service.ts  queue.service.ts
apps/api/src/core/types/: query-params.type.ts
apps/api/src/plugins/auth/: index.ts
apps/api/src/plugins/contents/: content-fetching.cron.ts  events.ts  index.ts
apps/api/src/plugins/cron/: index.ts
apps/api/src/plugins/error/: index.ts
apps/api/src/plugins/facebook/: index.ts
apps/api/src/services/: crypto.service.ts  queue.service.ts  redis.service.ts
apps/client/: global.d.ts  next.config.ts  package.json
apps/client/.storybook/: preview.ts
apps/client/src/: auth.ts  middleware.ts
apps/client/src/app/: layout.tsx  page.tsx
apps/client/src/components/: AppSidebar.tsx  LinkPopup.tsx  Quota.tsx  SignIn.tsx  SignOut.tsx  Spinner.tsx
apps/client/src/guards/: AccessTokenGuard.tsx
apps/client/src/hooks/: use-breakpoints.ts  use-media-query.ts  use-socket.ts
apps/client/src/stores/: contents.ts
apps/client/src/styles/: globals.css
(+94 files in other folders)
